	 menu_get_{open,save}_filename() to ui_get_{open,save}_filename() and
	 move widget_get_filename() to filesel.c (Stuart).
20071109 ui/{gtk/gtkui.c,win32/win32ui.c},ui.c,widget/menu.c: move
	 ui_{tape,{plus3,beta,plusd}_disk}_write() into ui.c (Stuart).
20071109 disk/{beta.c,plusd.c},machines/specplus3.c,ui/{gtk/confirm.c,ui.h,
	 win32/win32ui.c},ui.c,widget/widget.c: add varargs support to
	 ui_confirm_save() and use more detailed messages when ejecting
	 +3, +D and Beta disks (part of feature request #1828228) (Stuart).
20071109 ui/{gtk/gtkui.c,win32/win32ui.c},ui.c: move #include "tape.h" to
	 where it's needed.
20071109 ui/fb/{fbdisplay.c,fbmouse.c}: fix warnings (Stuart).
20071111 if1.[ch],menu.[ch],menu_data.dat,ui/ui.h,ui.c,utils.c: rewrite
	 Microdrive cartridge insertion/ejection code (fixes bugs #1828225 and
	 1828984) (Stuart).
20071111 disk/disk.[ch]: remove 'filename' member of disk_t (Stuart).
20071112 menu_data.pl,ui/win32/{menu_data.[ch],menu_data.rc}: update menu data
	 for the Win32 UI (Stuart).
20071112 menu_data.pl: remove dead code (Stuart).
20071112 hacking/tc2048_tech_notes.txt,machines/{tc2048.c,tc2068.c}: contention
         tweak for TC2048 and TC2068 based on test programs from Phil and
         Mark Woodmass (Fred).
20071112 machines/pentagon.c: revert spec128 memory port change arising from
         Pentagon 512 and Pentagon 1024 emulation merge (patch #1774492), as it
         breaks the Eyeache 2 demo at least (fixes bug #1829280) (Fred).
20071115 if1.c: unformatted Microdrive cartridge fixes (patch #1769451)
	 (Gergely Szasz).
20071115 disk/plusd.c,z80/z80_ops.c: activate +D on reset and when executing
	 at 0x028e (KEY-SCAN) (Stuart Brady).
20071117 disk/plusd.c: ensure we get a prototype for memset (Fred).
20071117 if2.c, machine.c: fix loading Interface II ROMs (thanks, Stuart Brady)
	 (Fred).
20071118 sound/sdlsound.c: don't use power of two sound buffers on Amiga
         (more of patch #1712260) (Chris Young).